# greenLib

./: CMakeLists.txt  README.md  plan_list.txt
src/args/: args.cpp  args.h
src/defer/: defer.h
src/flags/: flags.h
src/log/: log.cpp  log.h
src/singelton/: non_copyable.h  non_movable.h  singelton.h
src/string/: string_checker.cpp  string_checker.h  string_formater.cpp  string_formater.h
src/tests/: tests.h
tests/test_defer/: CMakeLists.txt  main.cpp
tests/test_flags/: CMakeLists.txt  main.cpp
tests/test_log/: CMakeLists.txt  main.cpp
tests/test_singelton/: CMakeLists.txt  main.cpp
tests/test_string/: CMakeLists.txt  main.cpp
